5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1807_2568.log
== TEST (2019-06-12 21:11:46) 
-- CODE:
from numpy import *
n = int(input("entre com o numero de asteristicos: "))
x = n*2
c=1
while(c<=x)
	print("*", end='')
-- ERROR:
File "XXXX", line 5
    while(c<=x)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:13:42) 
-- CODE:
from numpy import *
n = int(input("entre com o numero de asteristicos: "))
x = n*2
c=1
while(c<=x)
	print("*", end='')
	c = c + 1
-- ERROR:
File "XXXX", line 5
    while(c<=x)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:14:11) 
-- CODE:
from numpy import *
n = int(input("entre com o numero de asteristicos: "))
x = n*2
c=1
while(c<=x):
	print("*", end='')
	c = c + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 16:19:02) 
-- CODE:
from numpy import *
n = int(input("entre com o numero de asteristicos: "))
s = []
v = []
x = n*2
c=1
z= n-1
while(c<=x):
	s.append('*')
	c = c + 1
v = str(s).strip('[]')
v = v (end='')
print (v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 16:20:17) 
-- CODE:
from numpy import *
n = int(input("entre com o numero de asteristicos: "))
s = []
v = []
x = n*2
c=1
z= n-1
while(c<=x):
	s.append('*')
	c = c + 1
v = str(s).strip('[]')
v = (v,end='')
print (v)
-- ERROR:
File "XXXX", line 12
    v = (v,end='')
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
